[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-event-bus"
version = "1.0.0"
description = "Event-driven communication backbone for your next AI agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Rudra" },
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dotenv = ["python-dotenv>=1.0"]
all = ["event-bus[pydantic,dotenv]"]

[project.urls]
Source = "https://github.com/Rudra-narayan-muduli-001/Python-Event_Bus"

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
explicit_package_bases = true
namespace_packages = true
